--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ branding:
   color: 'orange'
 
 inputs:
-  svn_username:
+  svn-username:
     description: >
       WordPress plugin directory Subversion username, remember your username is case sensitive.
 
@@ -34,3 +34,7 @@ runs:
     - id: deploy
       run: php ${{ github.action_path }}/deploy.php
       shell: bash
+      with:
+        svn-username: ${{ inputs.svn-username }}
+        svn-password: ${{ inputs.svn-password }}
+        wp-slug: ${{ inputs.wp-slug }}
